# course-app

./: Makefile  pyproject.toml  setup.cfg
.github/actions/build-aplication/: action.yml
.github/workflows/: lint.yml  workflow.yml
inference_service/: Makefile  pyproject.toml  setup.cfg
inference_service/.github/actions/build-aplication/: action.yml
inference_service/app/: run.py
inference_service/app/api/: prediction.py
inference_service/app/config/: .env  __init__.py  model.py
inference_service/app/schema/: aprtment.py
inference_service/app/services/: model_inference.py
src/: runner.py
src/config/: .env  __init__.py  db.py  logger.py
src/db/: duckdb_data.py  duckdb_database.db
src/model/: model_service.py
src/model/pipeline/: data_collection.py  data_preparation.py  model.py
