[tool.poetry]
name = "house-predict"
version = "0.1.0"
description = ""
authors = ["Yusuf Raheem <yusufraheem500@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = ">=2.3.2,<3.0.0"
scikit-learn = ">=1.7.1,<2.0.0"
loguru = ">=0.7.3,<0.8.0"
pydantic-settings = ">=2.10.1,<3.0.0"
numpy = ">=2.3.2,<3.0.0"
seaborn = ">=0.13.2,<0.14.0"
duckdb = ">=1.3.2,<2.0.0"
duckdb-engine = ">=0.17.0,<0.18.0"
dbt-core = ">=1.10.9,<2.0.0"
dbt-duckdb = ">=1.9.4,<2.0.0"
sqlalchemy = ">=2.0.43,<3.0.0"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = ">=1.4.0,<2.0.0"
ruff = ">=0.12.10,<0.13.0"
black = ">=25.1.0,<26.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
