[tool.poetry]
name = "inference-service"
version = "0.1.0"
description = ""
authors = ["Yusuf Raheem <yusufraheem500@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"
pydantic = "^2.11.7"
pandas = "^2.3.2"
loguru = "^0.7.3"
pydantic-settings = "^2.10.1"
scikit-learn = "^1.7.1"
wemake-python-styleguide = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
